<resources>
    <string name="app_name">PlantPal</string>

    <string name="str_please_wait">Please Wait</string>
    <string name="str_alert">Alert</string>
    <string name="str_confirm">Confirm</string>
    <string name="str_ok">OK</string>
    <string name="str_yes">Yes</string>
    <string name="str_no">No</string>
    <string name="str_error">Error</string>
    <string name="str_success">Success</string>
    <string name="str_sorry">Oops</string>
    <string name="str_cancel">Cancel</string>
    <string name="str_save">Save</string>
    <string name="str_send">Send</string>
    <string name="str_close">Close</string>
    <string name="str_delete">Delete</string>
    <string name="str_update">Update</string>
    <string name="title_not_found">Data Not Found</string>
    <string name="str_loading">Loading</string>
    <string name="str_not_selected">Not Selected</string>
    <string name="str_password">Password</string>
    <string name="str_login">Login</string>
    <string name="str_error_not_expected">Unexpected Error</string>
    <string name="str_remember_me">Remember Me</string>
    <string name="str_profile">Profile</string>
    <string name="str_logout">Logout</string>
    <string name="str_sign_up">Sign Up</string>
    <string name="str_not_have_account">Don\'t Have an Account? Sign Up</string>
    <string name="str_already_have_account">Already Have an Account? Login</string>

    <string name="error_enter_your_name">Please Enter Your Name</string>
    <string name="error_enter_your_email">Please Enter Your Email</string>
    <string name="error_email_not_validation">Invalid Email</string>
    <string name="error_password_not_validation">Password Must Contain Capital Later, Minimum one Number, Minimum one symbol </string>
    <string name="error_enter_your_address">Please Enter Your Address</string>
    <string name="error_enter_your_password">Please Enter Your Password</string>

    <string name="error_required">Field Required</string>
    <string name="error_rating_required">Rating Required</string>
    <string name="error_image_required">Image Required</string>

    <string name="str_no_plant">Plant Not Found</string>
    <string name="str_no_result">No Results Found</string>
    <string name="str_no_accessory">Accessory Not Found</string>
    <string name="str_no_users">Users Not Found</string>
    <string name="str_no_feedback">Not Yet Feedback</string>
    <string name="str_no_favorite">No Favorites Found</string>
    <string name="str_no_cart_item">No Items In Cart</string>

    <string name="hint_email">Email</string>
    <string name="hint_address">Address</string>
    <string name="user_name">User Name</string>
    <string name="str_users">Users</string>
    <string name="str_not_exist_this_email">Email Does Not Exist</string>
    <string name="str_password_not_correct">Incorrect Password</string>

    <string name="str_email_exist">This Email Already Exists</string>
    <string name="str_plant">Plant</string>
    <string name="str_accessory">Accessory</string>
    <string name="hint_plant_name">Plant Name</string>
    <string name="hint_price">Price</string>
    <string name="str_add_plant">Add Plant</string>
    <string name="str_accessory_name">Accessory Name</string>
    <string name="str_add_accessory">Add Accessory</string>
    <string name="str_update_accessory">Update Accessory</string>
    <string name="btn_click_to_select_image">Click To Select an Image</string>
    <string name="hint_stock">Stock</string>
    <string name="hint_care_instructions">Care Instructions</string>
    <string name="hint_usage_instructions">Usage Instructions</string>
    <string name="hint_grow_habit">Grow Habit</string>
    <string name="hint_description">Description</string>
    <string name="add_successfully">Added Successfully</string>
    <string name="update_successfully">Updated Successfully</string>
    <string name="delete_successfully">Deleted Successfully</string>
    <string name="message_send_successfully">Message Sent Successfully</string>
    <string name="hint_accessory_name">Accessory Name</string>
    <string name="str_feedback">Feedback</string>
    <string name="str_users_details">User Details</string>

    <string name="title_update_plant">Update Plant</string>

    <string name="error_no_app">App not found to perform this action</string>
    <string name="msg_confirm_delete">Are You Sure You Want to Delete?</string>
    <string name="msg_confirm_delete_account">Are You Sure You Want to Delete This Account?</string>
    <string name="msg_account_deleted">This Account Has Been Deleted</string>

    <string name="str_uploading_image">Uploading Image</string>
    <string name="str_status_uploading_image">Uploading Progress</string>
    <string name="hint_species">Species</string>
    <string name="hint_type">Type</string>
    <string name="hint_search_by_name">Search By Name</string>
    <string name="str_filter">Filter</string>
    <string name="str_filter_by">Filter By</string>
    <string name="str_sort_by">Sort By</string>

    <string name="str_name">Name</string>
    <string name="str_price">Price</string>
    <string name="str_species">Species</string>
    <string name="str_add_to_cart">Add To Cart</string>
    <string name="str_favorite">Favorite</string>
    <string name="str_cart">Cart</string>
    <string name="str_checkout">Check Out</string>
    <string name="hint_delete_account">Delete Account</string>
    <string name="user_from">From</string>
    <string name="hint_message">Message</string>
    <string name="hint_your_feedback">Your Feedback</string>
    <string name="str_contact_us">Contact Us</string>
    <string name="str_version">Version</string>

    <string name="login_welcome_text">Log In!</string>
    <string name="login_welcome">Welcome Back,</string>

    <string name="signup_welcome_hello">Hello,</string>
    <string name="signup_welcome_text">Sign Up!</string>

    <string name="bg_img_desc">Image View</string>
    <string name="add_img_item_desc">Image Item</string>
    <string name="plus_btn_desc">Increase Button</string>
    <string name="minus_btn_desc">Decrease Button</string>
    <string name="pro_details_delete_btn_desc">Remove item Button</string>
    <string name="pro_details_like_btn_desc">Like Button</string>
    <string name="hint_rating">Rating</string>
    <string name="contact_us_title">Get in touch with us using this mail</string>
    <string name="str_contact_mail">plantpal@gmail.com</string>
    <string name="str_help">Help</string>

</resources>