<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="">
        <menu>

            <item
                android:id="@+id/drawer_menu_profile"
                android:icon="@drawable/ic_profile"
                android:title="@string/str_profile" />



            <item
                android:id="@+id/drawer_menu_favorites"
                android:icon="@drawable/ic_favorite"
                android:title="@string/str_favorite" />



            <item
                android:id="@+id/drawer_menu_feedback"
                android:icon="@drawable/ic_feedback"
                android:title="@string/str_feedback" />


            <item
                android:id="@+id/drawer_menu_contact_us"
                android:icon="@drawable/ic_contact"
                android:title="@string/str_contact_us" />



            <item
                android:id="@+id/drawer_menu_help"
                android:icon="@drawable/ic_help"
                android:title="@string/str_help" />


            <item
                android:id="@+id/drawer_menu_logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/str_logout" />
        </menu>
    </item>

</menu>
